2007-03-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-common.c:
	(bacon_video_widget_common_can_direct_seek): Make direct seeking
	work on DVDs in xine-lib

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_callback_connect): Patch from Harm Hilvers
	<harm@tweakers.net> to switch the Play button to be at the leftmost
	(Closes: #164037)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_setup_recent): Patch from Philip Withnall
	<bugzilla@tecnocode.co.uk> to grab the recent files manager from
	the right screen (Closes: #395195)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* data/uri.glade: patch from Emil Soleyman-Zomalan <emil@soleyman.com>
	to make the Open Location dismiss when pressing enter (Closes: #394215)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_open_location): Fix leak when
	stream is already in the recent files, spotted by Christian
	Persch <chpe@svn.gnome.org> (Closes: #423079)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_setup_window): Patch from Christian Persch
	<chpe@svn.gnome.org> to fix a memory leak (Closes: #423067)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key_press): Make pause actually
	pause, and stop pause as well (Closes: #422956)

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_bus_message_cb):
	  No need to flood stdout with g_message()s if we find an unknown
	  GstMessage type on the bus (Closes: #420253).

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_from_gst_error):
	  Fix ambiguous error message (#420937).

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_set_device_on_element):
	(playbin_source_notify_cb):